# cf-review-tool

./: .gitignore  CLAUDE.md  README.md  analyzer.py  app.py  fetcher.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: test_analyzer.py  test_fetcher.py  test_insights.py  test_weakness.py
